[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Cannon/Bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/cannon/32x32_ball_blue.png" type="Texture" id=2]
[ext_resource path="res://resources/sounds/small/screen_borders_alarm.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/sounds/small/ball_shot.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.1772

[node name="Bullet" type="Area2D" index="0"]

position = Vector2( -2.57567, 7.51237 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="." index="1"]

rect = Rect2( -10, -10, 20, 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -0.354049, -0.0721846 )
scale = Vector2( 0.496353, 0.516475 )
shape = SubResource( 1 )

[node name="Border_reached" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Hitsound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]

[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]

[connection signal="finished" from="Border_reached" to="." method="die"]

[connection signal="finished" from="Hitsound" to="." method="die"]


